<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:rowCount="6"
        android:columnCount="5"
        tools:context=".MainActivity">

        <Button
            style="@style/button"
            android:text="@string/btn_MC"/>
        <Button
            style="@style/button"
            android:text="@string/btn_MR"/>
        <Button
            style="@style/button"
            android:text="@string/btn_MS"/>
        <Button
            style="@style/button"
            android:text="@string/btn_M_PLUS"/>
        <Button
            style="@style/button"
            android:text="@string/btn_M_MINUS"/>
        <Button
            style="@style/button"
            android:onClick="rushb"
            android:text="@string/btn_BACKSPACE"
            android:textStyle="bold"/>
        <Button
            style="@style/button"
            android:onClick="mistake"
            android:text="@string/btn_CE"/>
        <Button
            style="@style/button"
            android:onClick="nuke"
            android:text="@string/btn_C"/>
        <Button
            style="@style/button"
            android:text="@string/btn_PLUS_MINUS"/>
        <Button
            style="@style/button"
            android:onClick="btn_sqr_root"
            android:text="@string/btn_SQR_ROOT"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_SEVEN"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_EIGHT"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_NINE"/>
        <Button
            style="@style/btn_operation"
            android:text="@string/btn_DIVIDE"/>
        <Button
            style="@style/button"
            android:text="@string/btn_PERCENT"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_FOUR"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_FIVE"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_SIX"/>
        <Button
            style="@style/btn_operation"
            android:text="@string/btn_MULTIPLY"/>
        <Button
            style="@style/button"
            android:text="@string/btn_FRACTION"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_ONE"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_TWO"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_THREE"/>
        <Button
            style="@style/btn_operation"
            android:text="@string/btn_MINUS"/>
        <Button
            style="@style/button"
            android:text="@string/btn_EQUAL"
            android:onClick="btn_equal"
            android:layout_rowSpan="2"/>
        <Button
            style="@style/btn_number"
            android:text="@string/btn_ZERO"
            android:layout_columnSpan="2"/>
        <Button
            style="@style/button"
            android:onClick="btn_dot"
            android:text="@string/btn_DOT"/>
        <Button
            style="@style/btn_operation"
            android:text="@string/btn_PLUS"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>